--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Loruki | Cloud Hosting For Everyone</title>
+    <title>AlphaQ | Docs</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -68,7 +68,7 @@
                     <i class="fas fa-info"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, animi?
                 </div>
 
-                <h3>Install and ready to go</h3>
+                <h3>Install and get started</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima totam magni eius vitae velit id, atque veritatis! At, vero porro.</p>
                 <a href="#" class="btn btn-primary">Install CLI</a>
 
