--- a/features.html
+++ b/features.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">About Us</a></li>
+                    <li><a href="features.html">About</a></li>
                     <li><a href="docs.html">Docs</a></li>
                     <li><a href="#">Login</a></li>
                 </ul>
