--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
     <section class="cli">
         <div class="container grid">
             <iframe src="https://player.vimeo.com/video/474730193" width="600" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-
-            <div class="card">
-                <h3>Easy to use platform, want to learn how? </h3>
-            </div>
-
-            <div class="card">
+            <div class="container flex">
+            <div class="card";>
+                <h3>Easy to use platform</h3>
+                <h3>Want to learn how?</h3>
                 <h3>See the Video</h3>
+            </div>
             </div>
         </div>
     </section>
