--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Cli -->
     <section class="cli">
         <div class="container grid">
-            <iframe src="https://player.vimeo.com/video/474730193" width="600" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/474730193" width="auto" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             <div class="container flex">
             <div class="card";>
                 <h3>Easy to use platform</h3>
